overflow fixed

--- a/style4.css
+++ b/style4.css
@@ -5,6 +5,10 @@
 	box-sizing: border-box;
 }
 
+html, body {
+	overflow-x: hidden;
+  }
+
 nav{
 	display:flex;
 	justify-content:space-around;
